# MegaDriveEnvironment

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md  THIRD_PARTY_NOTICES.md
docs/: box.pxd  cyberpunk.pxd  grafitti.pxd  ninja.pxd  pixelart.pxd  porsche.pxd  remote-access-protocol.md  robot.pxd  sax.pxd
include/MegaDriveEnvironment/system/: MegaDriveEnvironment.hpp
include/MegaDriveEnvironment/system/controllers/: Controllers.hpp
include/MegaDriveEnvironment/system/graphics/: Framebuffer.hpp  VDP.hpp  VDPPort.hpp  VDPRenderer.hpp  VDPRendererDebug.hpp  VDPState.hpp
include/MegaDriveEnvironment/system/memory/: SystemMemory.hpp
include/MegaDriveEnvironment/system/remote/: RemoteAccess.hpp
include/MegaDriveEnvironment/system/sound/: Sound.hpp
include/MegaDriveEnvironment/system/z80/: Z80.hpp
include/MegaDriveEnvironment/system/z80/suzukiplan/: z80.hpp
include/MegaDriveEnvironment/util/: Logger.hpp
python/: README.md  pyproject.toml
python/src/megadrive_remote/: __init__.py  _protocol.py  client.py  exceptions.py  models.py
python/tests/: test_client.py
src/config/controls/: PlayerConfigScreen.cpp
src/runtime_tests/: TestFontPNG.cpp
src/runtime_tests/controllers/: TestControllers.cpp
src/runtime_tests/sound/: AudioHeadlessTest.cpp  TestSound.cpp
src/runtime_tests/vdp_tests/: TestVDPRunner.cpp  TestVDPSetup.cpp  TestVDPTest01.cpp  TestVDPTest02.cpp  TestVDPTest03.cpp  TestVDPTest04.cpp  TestVDPTest05.cpp  TestVDPTest06.cpp  TestVDPTest07.cpp  TestVDPTest08.cpp  TestVDPTest09.cpp  TestVDPTest10.cpp  TestVDPTest11.cpp  TestVDPTest12.cpp  TestVDPTest13.cpp  TestVDPTest14.cpp  TestVDPTest15.cpp  TestVDPTest16.cpp  TestVDPTest17.cpp  TestVDPTest18.cpp
src/system/: MegaDriveEnvironment.cpp
src/system/controllers/: Controllers.cpp
src/system/graphics/: Framebuffer.cpp  VDP.cpp  VDPPort.cpp  VDPRenderer.cpp  VDPRendererDebug.cpp  VDPState.cpp  VDPTile.cpp
src/system/memory/: SystemMemory.cpp
src/system/remote/: RemoteAccess.cpp
src/system/sound/: Sound.cpp
src/system/z80/: Z80.cpp
src/util/: Logger.cpp
tests/: debug_utilities_test.cpp  remote_access_foundations_test.cpp  remote_access_protocol_test.cpp  restart_test.cpp  sound_psg_test.cpp  system_memory_test.cpp  vdp_color_test.cpp  vdp_renderer_test.cpp
