[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "megadrive-environment-remote"
version = "0.2.0"
description = "Typed Python client for the MegaDriveEnvironment remote access protocol"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "MegaDriveEnvironment contributors"}]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Testing",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
megadrive_remote = ["py.typed"]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "strict"
